Uses reflection and latest Netty 4.2 release